# vulnhound

./: .env.example  .gitignore  AUDIT_CHECKLIST.md  README.md  USAGE.md  pyproject.toml  vulnhound-architecture.html
docker/: Dockerfile  docker-compose.yml
scripts/: kb_search_v2.py  search_v2core.py
src/: __init__.py  config.py  models.py
src/analyzers/: __init__.py  aderyn_runner.py  fp_filter.py  slither_runner.py
src/cli/: main.py
src/ingester/: __init__.py  ast_parser.py  clone.py  dependency_graph.py  proxy_detector.py  resolver.py
src/knowledge_base/: embedder.py  ingest_exploits.py  ingest_patterns.py  ingest_rekt.py  ingest_solodit.py  vector_store.py
src/llm/: __init__.py  engine.py
src/llm/prompts/: templates.py
src/poc_gen/: skeleton.py
src/reporter/: __init__.py  markdown.py
src/retriever/: __init__.py  retriever.py  risk_scorer.py
src/validator/: __init__.py  deduplicator.py  severity_scorer.py
tests/unit/: test_analyzers.py  test_ingester.py  test_llm_engine.py  test_models.py  test_reporter.py  test_retriever.py  test_validator.py
