[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulnhound"
version = "0.1.0"
description = "AI-powered smart contract auditing agent with historical exploit knowledge"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Khudaniya" },
]
keywords = ["smart-contracts", "security", "audit", "ai", "defi", "solidity"]

dependencies = [
    # === Core Agent Framework ===
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "anthropic>=0.40.0",

    # === Vector DB & Embeddings ===
    "chromadb>=0.5.0",
    "openai>=1.50.0",              # for text-embedding-3-large

    # === Static Analysis ===
    "slither-analyzer>=0.10.0",

    # === Code Parsing ===
    "solidity-parser>=0.1.0",
    "tree-sitter>=0.22.0",

    # === Data Processing ===
    "pydantic>=2.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "rich>=13.0",                  # beautiful CLI output
    "typer>=0.12.0",               # CLI framework

    # === API Server ===
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",

    # === Report Generation ===
    "jinja2>=3.1.0",

    # === Utilities ===
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "tenacity>=9.0.0",            # retry logic for API calls
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

production = [
    "pinecone-client>=5.0.0",     # production vector DB
    "cohere>=5.0.0",              # reranker
    "weasyprint>=62.0",           # PDF generation
    "redis>=5.0.0",               # job queue
    "psycopg2-binary>=2.9.0",     # PostgreSQL
]

[project.scripts]
vulnhound = "src.cli.main:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
